# RNgfyx957wg9LTLdUHZJjiQyv9KN4njd0fgxQte6tvV7ktFYUzwfSHxYBXpwzcu1rVx1yJ0ZGMTDpL1Fupipp7KJZZJ2j41ZJuAQ

./: .gitignore  build (small).bat  build.bat  whatsnew.md
dependencies/: buildffmpeg.sh  libgd.js
dependencies/ffmpeg/: config.asm  config.h  config_components.asm  config_components.h
dependencies/ffmpeg/doc/: config.texi
dependencies/ffmpeg/ffbuild/: config.fate  config.mak  config.sh
dependencies/ffmpeg/fftools/: cmdutils.d  ffmpeg.d  ffmpeg_dec.d  ffmpeg_demux.d  ffmpeg_enc.d  ffmpeg_filter.d  ffmpeg_hw.d  ffmpeg_mux.d  ffmpeg_mux_init.d  (+4 more)
dependencies/tauri/: package-lock.json  package.json  shortcut.ps1
dependencies/tauri/src-tauri/: Cargo.toml  tauri.conf.json
dependencies/tauri/src-tauri/capabilities/: default.json
dependencies/tauri/src-tauri/src/: lib.rs  main.rs
project/json/: colors.json  credits.json  difficulties.json  editorButtonCreationOrder.json  editormodes.json  levelnames.json  macrotips.json  mappacks.json  profanity.json  settings.json  songs.json  splashes.json  tileInformation.json
scripts/: whatisthis.md  ~build.js
scripts/audio/: musicoverride.js  musicquality.js  swapcompressed.js  ~audiomap.js  ~buildaltaudio.js  ~buildmusicquality.js
scripts/demonlist/: build.js  runtime.js
scripts/leveldeco/: build.js  leveldeco.js
scripts/mappack/: build.js  runtime.js
scripts/portal/: build.js  runtime.js
scripts/rated/: runtime.js  ~build.js
scripts/settings/: runtime.js  storage.js  ~build.js
scripts/tas/: 1setup.js  2practice.js  3recordplayback.js  4video.js  5hud.js  6listeners.js  7housekeeping.js  ~build.js
(+120 files in other folders)
